docs/7.54/md/abenabap_dynpros_help.md
---
title: "Field Help, Input Help, and Dropdown List Boxes"
description: |
  The field help (F1) and input help (F4) are standard functions. No other function codes can be associated with the function keys F1 and F4. -   When the function key F1 or the corresponding icon on the toolbar is chosen, a help text is displayed for the field with the cursor. -   When the function k
version: "7.54"
category: "general"
type: "abap-reference"
sourceUrl: "https://help.sap.com/doc/abapdocu_754_index_htm/7.54/en-US/abenabap_dynpros_help.htm"
abapFile: "abenabap_dynpros_help.htm"
keywords: ["do", "abenabap", "dynpros", "help"]
---

* * *

AS ABAP Release 754, ©Copyright 2019 SAP SE. All rights reserved.

[ABAP Keyword Documentation](https://help.sap.com/doc/abapdocu_754_index_htm/7.54/en-US/abenabap.htm) →  [ABAP − Reference](https://help.sap.com/doc/abapdocu_754_index_htm/7.54/en-US/abenabap_reference.htm) →  [SAP GUI User Dialogs](https://help.sap.com/doc/abapdocu_754_index_htm/7.54/en-US/abenabap_screens.htm) →  [General Dynpros](https://help.sap.com/doc/abapdocu_754_index_htm/7.54/en-US/abenabap_dynpros.htm) → 

Field Help, Input Help, and Dropdown List Boxes

The field help (F1) and input help (F4) are standard functions. No other function codes can be associated with the function keys F1 and F4.

-   When the function key F1 or the corresponding icon on the toolbar is chosen, a help text is displayed for the field with the cursor.

-   When the function key F4 or the input help button on the right of a screen field is chosen, all possible input values for the field with the cursor are displayed. The user can then choose one or more values, which are then entered in the screen field.

There are various ways of providing field help and input help, some of which involve predefined ABAP Dictionary functions and some which require self-programmed solutions.

One special way to display value list, for example, are dropdown list boxes.

-   [Field help](https://help.sap.com/doc/abapdocu_754_index_htm/7.54/en-US/abenabap_dynpros_field_help.htm)

-   [Input help](https://help.sap.com/doc/abapdocu_754_index_htm/7.54/en-US/abenabap_dynpros_value_help.htm)

-   [Dropdown list boxes](https://help.sap.com/doc/abapdocu_754_index_htm/7.54/en-US/abenabap_dynpros_listbox.htm)

Continue
[Field Help](https://help.sap.com/doc/abapdocu_754_index_htm/7.54/en-US/abenabap_dynpros_field_help.htm)
[Input Help](https://help.sap.com/doc/abapdocu_754_index_htm/7.54/en-US/abenabap_dynpros_value_help.htm)
[Dropdown List Boxes](https://help.sap.com/doc/abapdocu_754_index_htm/7.54/en-US/abenabap_dynpros_listbox.htm)
[Field Helps, Input Helps, and Dropdown List Boxes - Examples](https://help.sap.com/doc/abapdocu_754_index_htm/7.54/en-US/abeninput_help_abexas.htm)