docs/7.57/md/abenabap_dynpros_help.md
---
title: "Continue"
description: |
  dynpro - Field Help(https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_dynpros_field_help.htm) dynpro - Input Help(https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_dynpros_value_help.htm) dynpro - Dropdown List Boxes(https://help.sap.com/doc/abapdocu_757_ind
version: "7.57"
category: "general"
type: "abap-reference"
sourceUrl: "https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_dynpros_help.htm"
abapFile: "abenabap_dynpros_help.htm"
keywords: ["do", "if", "abenabap", "dynpros", "help"]
---

* * *

AS ABAP Release 757, ©Copyright 2023 SAP SE. All rights reserved.

[ABAP - Keyword Documentation](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap.htm) →  [ABAP - Programming Language](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_reference.htm) →  [SAP GUI User Dialogs](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_screens.htm) →  [General Dynpros](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_dynpros.htm) → 

 [![](Mail.gif?object=Mail.gif&sap-language=EN "Feedback mail for displayed topic") Mail Feedback](mailto:f1_help@sap.com?subject=Feedback on ABAP Documentation&body=Document: dynpro - Field Help, Input Help, and Dropdown List Boxes, ABENABAP_DYNPROS_HELP, 757%
0D%0A%0D%0AError:%0D%0A%0D%0A%0D%0A%0D%0ASuggestion for improvement:)

dynpro - Field Help, Input Help, and Dropdown List Boxes

The field help (F1) and input help (F4) are standard functions. No other function codes can be linked with the function keys F1 and F4.

-   When the function key F1 or the corresponding icon on the toolbar is chosen, a help text is displayed for the field on which the cursor is positioned.
-   When the function key F4 or the input help button on the right of a screen field is chosen, all possible input values for the field on which the cursor is positioned are displayed. The user can then choose one or more values to copy to the screen field.

There are different ways of providing field help and input help, some of which involve predefined ABAP Dictionary functions and some which require self-programmed solutions.

One special way to display value list, for example, are dropdown list boxes.

-   [Field help](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_dynpros_field_help.htm)
-   [Input help](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_dynpros_value_help.htm)
-   [Dropdown list boxes](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_dynpros_listbox.htm)

Continue
[dynpro - Field Help](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_dynpros_field_help.htm)
[dynpro - Input Help](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_dynpros_value_help.htm)
[dynpro - Dropdown List Boxes](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_dynpros_listbox.htm)
[dynpro - Field Helps, Input Helps, and Dropdown List Boxes](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abeninput_help_abexas.htm)